# generate-vanila-wallet

./: .augment-guidelines  .env.example  .gitignore  Cargo.toml  README.md  deploy.sh
src/: config.rs  db.rs  main.rs  wallet_generator.rs
